# ProjectSynthesis

./: .claude_settings.json  .env.docker.example  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  agent_scratchpad.json  app_spec.txt  claude-progress.txt  design_architecture.md  docker-compose.yml  feature_list_1.json  feature_list_2.json  feature_list_gen.py  init.sh
backend/: .dockerignore  .svelte-kit  .venv  Dockerfile  node_modules  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  errors.py  main.py  mcp_server.py
backend/app/dependencies/: auth.py  rate_limit.py
backend/app/middleware/: session_cache.py
backend/app/models/: auth.py  branch.py  feedback.py  github.py  onboarding_event.py  optimization.py  repo_index.py
backend/app/prompts/: analyzer_prompt.py  explore_prompt.py  explore_synthesis_prompt.py  optimizer_prompts.py  strategy_prompt.py  validator_prompt.py
backend/app/providers/: anthropic_api.py  base.py  claude_cli.py  detector.py  mock.py
backend/app/routers/: __init__.py  (+17 more)
backend/tests/: test_adaptation_engine.py  test_auth_security.py  test_auth_wiring.py  test_cache_service.py  test_cleanup.py  test_context_builders.py  test_database.py  test_explore_phase.py  test_feedback_api.py  test_feedback_service.py  test_mcp_persistence.py  test_optimization_service.py  test_optimize_stream_parser.py  test_pipeline_retry_oracle.py  test_prompt_diff.py  test_providers.py  test_refinement_api.py  test_refinement_service.py  test_session_context.py  test_session_provider.py  test_url_fetcher.py
(+137 files in other folders)
